Untested additional options in GenomeContext